# advent-of-code

./: .gitignore  README.md  pyproject.toml
advent_of_code/: __init__.py
advent_of_code/gear_ratios/: __init__.py
tests/: test_gear_ratios.py
tests/rsc/: t_with_end.txt
