[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Patrick Stoeckle <patrick.stoeckle@posteo.de>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.1,<4.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
